# DownloadTheDocs

./: .gitignore  README.md  pyproject.toml
api/: .gitignore  main.py  pyproject.toml
backend/: .gitignore  api.py  main.py  pyproject.toml
backend/scraper/: __init__.py  main.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  authComponents.tsx
frontend/src/components/: button_function.ts  preview_box.tsx
frontend/src/pages/: home.css  home.tsx
frontend/src/style/: home.css
