[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Jasper Cantwell <jasper@digilab.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
mangum = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
