[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["jacantwell <jasper66018@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
scraper = { path = "../library" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
