[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Jasper Cantwell <jasper@digilab.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.43.0"
uvicorn = "^0.30.3"
fastapi = "^0.111.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
